--- a/index.html
+++ b/index.html
@@ -19,15 +19,55 @@
 </head>
 <body>
   <!-- PRELOAD-->
-  <div class="preload">
+  <div class="preload" data-preload>
     <div class="preload__circle"></div>
     <p class="preload__text">Grilli</p>
   </div>
   
+  <!-- HEADER -->
+  <div class="header" data-header>
+    <div class="header__container">
+      <a href="#" class="logo"><img src="images/logo.svg" alt="Grilli logo" width="160" height="50"></a>
+      <nav class="nav" data-navbar>
+        <button class="closeButton" aria-label="close menu" data-nav-toggler>
+          <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+        </button>
+
+        <a href="#" class="logo"><img src="images/logo.svg" alt="Grilli logo" width="160" height="50"></a>
+        <ul class="nav__list">
+          <li class="nav__list--item"><a href="#home" class="nav__list--link hover__underline active">
+            <div class="nav__list--link--icon"></div><span class="nav__list--link--text">inicio</span>
+          </a></li>
+          <li class="nav__list--item"><a href="#home" class="nav__list--link hover__underline ">
+            <div class="nav__list--link--icon"></div><span class="nav__list--link--text">menu</span>
+          </a></li>
+          <li class="nav__list--item"><a href="#home" class="nav__list--link hover__underline ">
+            <div class="nav__list--link--icon"></div><span class="nav__list--link--text">acerca de</span>
+          </a></li>
+          <li class="nav__list--item"><a href="#home" class="nav__list--link hover__underline ">
+            <div class="nav__list--link--icon"></div><span class="nav__list--link--text">chefs</span>
+          </a></li>
+          <li class="nav__list--item"><a href="#home" class="nav__list--link hover__underline ">
+            <div class="nav__list--link--icon"></div><span class="nav__list--link--text">contactanos</span></a></li>
+        </ul>
+      </nav>
+      <a href="#" class="btn btn__secondary">
+        <span class="text text-1">Reservar Mesa</span>
+        <span class="text text-2" aria-hidden="true">Reservar Mesa</span>
+      </a>
+      <button class="nav__openButton" aria-label="open menu" data-nav-toggler>
+        <span class="line line-1"></span>
+        <span class="line line-2"></span>
+        <span class="line line-3"></span>
+      </button>
+      <div class="overlay" data-nav-toggler data-overlay></div>
+    </div>
+  </div>
 
 
 
   <script src="js/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ionicons/7.1.0/esm/ionicons.min.js" integrity="sha512-2ySmquu6HK3CAvwLllh0R8K8buFPMZsUwWLZIlB7WW8c8ilUtoNyhsmEsQn2U0IV1USr2Oc/9DJzlr4cxAbuxA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
