--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <button class="hero__slider--btn--prev" aria-label="anterior" data-prev-btn=""><ion-icon name="chevron-back-outline"></ion-icon></button>
       <button class="hero__slider--btn--prev" aria-label="siguiente" data-next-btn=""><ion-icon name="chevron-forward-outline"></ion-icon></button>
       <a href="" class="hero__slider--btn has-after">
-        <img src="images/hero-icon.png" width="48" height="48" alt="reservar Mesa icono">
+        <img src="images/hero-icon.png" width="48" height="48" alt="reservar Mesa icono" class="hero__slider--btn--img">
         <span class="label-2 text_center span">Reservar mesa</span>
       </a>
     </section>
