--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- FONT -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Old+Standard+TT:wght@400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Old+Standard+TT:wght@400;700&family=Zeyada&display=swap" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="preload" href="images/hero-slider-1.jpg">
