add animation to the cards

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
         <img src="images/shape-2.png" width="343" height="345" loading="lazy" alt="img bg-black-10" class="shape shape-2 move-anim">
       </div>
     </section>
+    <!-- ABOUT SECTION -->
+    
   </main>
 
 
