--- a/index.html
+++ b/index.html
@@ -178,7 +178,29 @@
       </div>
     </section>
     <!-- ABOUT SECTION -->
-    
+    <section class="section about text_center" aria-labelledby="about-label" id="about">
+      <div class="about__container">
+        <p class="label-2 about__container--subtitle">Acerca de Nosotros</p>
+        <h2 class="headline-1 about__container--title">cada plato cuenta una historia</h2>
+        <p class="about__container--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quasi, optio obcaecati expedita voluptatum eligendi quas animi, exercitationem dolorum in beatae. Quis perferendis aliquam consequuntur consequatur. Facere tempore debitis quasi quia nobis animi fugit deleniti quos, eos iure non similique.</p>
+        <div class="contact__label">book through call</div>
+        <a href="" class="body-1 contact__number hover__underline"><ion-icon name="call-outline"></ion-icon> +54 1112349876</a>
+        <a href="#" class="hero__btn btn__primary">
+          <span class="text text-1">Ver más</span>
+          <span class="text text-2" aria-hidden="true">Ver más</span>
+        </a>
+        <div class="about__container--banner">
+          <img src="images/about-banner.jpg" alt="imagen del restaurante" width="570" height="570" class="w-100" loading="lazy" data-parallax-item data-parallax-speed="1">
+          <div class="about__container--img abs-img-1 has-before" data-parallax-item data-parallax-speed="1.75">
+            <img src="images/about-abs-image.jpg" width="285" height="285" loading="lazy" alt="" class="w-100">
+          </div>
+          <div class="about__container--img abs-img-2 has-before">
+            <img src="images/badge-2.png" width="133" height="134" loading="lazy" alt="">
+          </div>
+          <img src="images/shape-3.png" width="197" height="194" loading="lazy" alt="" class="shap">
+        </div>
+      </div>
+    </section>
   </main>
 
 
