--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="about__container--img abs-img-2 has-before">
             <img src="images/badge-2.png" width="133" height="134" loading="lazy" alt="">
           </div>
-          <img src="images/shape-3.png" width="197" height="194" loading="lazy" alt="" class="shap">
+          <!-- <img src="images/shape-3.png" width="197" height="194" loading="lazy" alt="" class="shap"> -->
         </div>
       </div>
     </section>
