finish about section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <h2 class="headline-1 about__container--title">cada plato cuenta una historia</h2>
         <p class="about__container--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quasi, optio obcaecati expedita voluptatum eligendi quas animi, exercitationem dolorum in beatae. Quis perferendis aliquam consequuntur consequatur. Facere tempore debitis quasi quia nobis animi fugit deleniti quos, eos iure non similique.</p>
         <div class="contact__label">book through call</div>
-        <a href="" class="body-1 contact__number hover__underline"><ion-icon name="call-outline"></ion-icon> +54 1112349876</a>
+        <p class="body-1 contact__number hover__underline"><ion-icon name="call-outline"></ion-icon> +54 1112349876</p>
         <a href="#" class="hero__btn btn__primary">
           <span class="text text-1">Ver más</span>
           <span class="text text-2" aria-hidden="true">Ver más</span>
